fix panic
